--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -17,8 +17,8 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>700</y>
+      <x>400</x>
+      <y>820</y>
       <width>261</width>
       <height>27</height>
      </rect>
@@ -30,8 +30,8 @@
    <widget class="QPushButton" name="button_save">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>660</y>
+      <x>400</x>
+      <y>780</y>
       <width>261</width>
       <height>27</height>
      </rect>
@@ -43,10 +43,10 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>40</y>
+      <x>390</x>
+      <y>20</y>
       <width>261</width>
-      <height>231</height>
+      <height>261</height>
      </rect>
     </property>
     <property name="font">
@@ -154,15 +154,41 @@
       </item>
      </layout>
     </widget>
+    <widget class="QPushButton" name="button_load_default_cellid_parameters">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>220</y>
+       <width>241</width>
+       <height>27</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Load default cell ID parameters</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QTextEdit" name="log_window">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>390</y>
-      <width>621</width>
+      <x>10</x>
+      <y>610</y>
+      <width>651</width>
       <height>161</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="prepare_structure">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>300</y>
+      <width>221</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Prepare folder structure</string>
     </property>
    </widget>
   </widget>
