--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>694</width>
+    <width>838</width>
     <height>907</height>
    </rect>
   </property>
@@ -43,10 +43,10 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>420</x>
+      <x>500</x>
       <y>20</y>
       <width>261</width>
-      <height>261</height>
+      <height>271</height>
      </rect>
     </property>
     <property name="font">
@@ -61,51 +61,11 @@
     <property name="title">
      <string>Cell ID Parameters</string>
     </property>
-    <widget class="QTextEdit" name="max_dist_over_waist">
-     <property name="geometry">
-      <rect>
-       <x>200</x>
-       <y>30</y>
-       <width>50</width>
-       <height>31</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QTextEdit" name="max_split_over_minor_axis">
-     <property name="geometry">
-      <rect>
-       <x>200</x>
-       <y>70</y>
-       <width>50</width>
-       <height>27</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QTextEdit" name="min_pixels_per_cell">
-     <property name="geometry">
-      <rect>
-       <x>200</x>
-       <y>110</y>
-       <width>50</width>
-       <height>27</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QTextEdit" name="max_pixels_per_cell">
-     <property name="geometry">
-      <rect>
-       <x>200</x>
-       <y>150</y>
-       <width>50</width>
-       <height>27</height>
-      </rect>
-     </property>
-    </widget>
     <widget class="QPushButton" name="button_change_cellid_parameters">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>190</y>
+       <y>200</y>
        <width>241</width>
        <height>27</height>
       </rect>
@@ -114,13 +74,13 @@
       <string>Change cell ID parameters</string>
      </property>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>30</y>
        <width>180</width>
-       <height>151</height>
+       <height>161</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
@@ -158,7 +118,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>220</y>
+       <y>230</y>
        <width>241</width>
        <height>27</height>
       </rect>
@@ -166,6 +126,30 @@
      <property name="text">
       <string>Load default cell ID parameters</string>
      </property>
+    </widget>
+    <widget class="QWidget" name="">
+     <property name="geometry">
+      <rect>
+       <x>200</x>
+       <y>30</y>
+       <width>41</width>
+       <height>161</height>
+      </rect>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_4">
+      <item>
+       <widget class="QTextEdit" name="max_dist_over_waist"/>
+      </item>
+      <item>
+       <widget class="QTextEdit" name="max_split_over_minor_axis"/>
+      </item>
+      <item>
+       <widget class="QTextEdit" name="min_pixels_per_cell"/>
+      </item>
+      <item>
+       <widget class="QTextEdit" name="max_pixels_per_cell"/>
+      </item>
+     </layout>
     </widget>
    </widget>
    <widget class="QTextEdit" name="log_window">
@@ -181,8 +165,8 @@
    <widget class="QPushButton" name="prepare_structure">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>430</y>
+      <x>20</x>
+      <y>480</y>
       <width>221</width>
       <height>27</height>
      </rect>
@@ -191,93 +175,106 @@
      <string>Prepare folder structure</string>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>50</y>
-      <width>154</width>
-      <height>151</height>
+      <x>19</x>
+      <y>20</y>
+      <width>461</width>
+      <height>271</height>
      </rect>
     </property>
-    <layout class="QVBoxLayout" name="verticalLayout_2">
-     <item>
-      <widget class="QPushButton" name="working_directory">
-       <property name="text">
-        <string>Working directory...</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="cell_id_executable">
-       <property name="text">
-        <string>Cell ID executable...</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="fiji_executable">
-       <property name="text">
-        <string>Fiji executable...</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="spottyR_file">
-       <property name="text">
-        <string>spotty.R file...</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QWidget" name="">
-    <property name="geometry">
-     <rect>
-      <x>170</x>
-      <y>50</y>
-      <width>231</width>
-      <height>151</height>
-     </rect>
+    <property name="title">
+     <string>Preferences</string>
     </property>
-    <layout class="QVBoxLayout" name="verticalLayout_3">
-     <item>
-      <widget class="QLineEdit" name="lineEditworking_directory">
-       <property name="font">
-        <font>
-         <pointsize>9</pointsize>
-        </font>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="lineEditcell_id_executable">
-       <property name="font">
-        <font>
-         <pointsize>9</pointsize>
-        </font>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="lineEditfiji_executable">
-       <property name="font">
-        <font>
-         <pointsize>9</pointsize>
-        </font>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="lineEditspottyR_file">
-       <property name="font">
-        <font>
-         <pointsize>9</pointsize>
-        </font>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    <widget class="QWidget" name="layoutWidget">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>154</width>
+       <height>161</height>
+      </rect>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_2">
+      <item>
+       <widget class="QPushButton" name="working_directory">
+        <property name="text">
+         <string>Working directory...</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="cell_id_executable">
+        <property name="text">
+         <string>Cell ID executable...</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="fiji_executable">
+        <property name="text">
+         <string>Fiji executable...</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="spottyR_file">
+        <property name="text">
+         <string>spotty.R file...</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+    <widget class="QWidget" name="layoutWidget">
+     <property name="geometry">
+      <rect>
+       <x>170</x>
+       <y>30</y>
+       <width>251</width>
+       <height>161</height>
+      </rect>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_3">
+      <item>
+       <widget class="QLineEdit" name="lineEditworking_directory">
+        <property name="font">
+         <font>
+          <pointsize>8</pointsize>
+         </font>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="lineEditcell_id_executable">
+        <property name="font">
+         <font>
+          <pointsize>8</pointsize>
+         </font>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="lineEditfiji_executable">
+        <property name="font">
+         <font>
+          <pointsize>8</pointsize>
+         </font>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="lineEditspottyR_file">
+        <property name="font">
+         <font>
+          <pointsize>8</pointsize>
+         </font>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -285,7 +282,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>694</width>
+     <width>838</width>
      <height>25</height>
     </rect>
    </property>
