--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Spot Analyser</string>
+   <string>Spotalyser</string>
   </property>
   <property name="windowIcon">
    <iconset>
@@ -514,6 +514,19 @@
       <string>Run all steps</string>
      </property>
     </widget>
+   </widget>
+   <widget class="QCheckBox" name="cb_decimal_separator">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>560</y>
+      <width>271</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Decimal separator is dot (e.g. Linux)</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
