--- a/CP/gui.ui
+++ b/CP/gui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>626</width>
-    <height>396</height>
+    <width>629</width>
+    <height>316</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -83,7 +83,7 @@
    <property name="geometry">
     <rect>
      <x>470</x>
-     <y>360</y>
+     <y>250</y>
      <width>141</width>
      <height>23</height>
     </rect>
@@ -98,7 +98,7 @@
      <x>20</x>
      <y>120</y>
      <width>160</width>
-     <height>136</height>
+     <height>151</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -136,6 +136,19 @@
        <string>Annotate cells</string>
       </property>
      </widget>
+    </item>
+    <item>
+     <spacer name="verticalSpacer">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>40</height>
+       </size>
+      </property>
+     </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="pb_run">
