Work in progress

--- a/CP/gui.ui
+++ b/CP/gui.ui
@@ -159,6 +159,28 @@
     </item>
    </layout>
   </widget>
+  <widget class="QWidget" name="horizontalLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>120</y>
+     <width>421</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>Enter channel tokens (sep. by space):</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLineEdit" name="le_channeltoken"/>
+    </item>
+   </layout>
+  </widget>
  </widget>
  <resources/>
  <connections/>
